# api/api.yaml
@@ -316,13 +316,19 @@ paths:
         401:
           description: Unauthorized
 
-  /api/sse:
+  /api/stream/sse/timeline:
     get:
       tags:
         - Streaming
+      parameters:
+        - name: scope
+          in: query
+          required: true
+          schema:
+            $ref: "#/components/schemas/TimelineScope"
       responses:
         200:
-          description: Server Sent Events
+          description: OK
           content:
             text/event-stream:
               schema:
@@ -359,6 +365,10 @@ components:
         - id
         - body
         - user
+    TimelineScope:
+      type: string
+      enum:
+        - local
 
   securitySchemes:
     AccessToken:
