# backend/src/app/model/Timeline/TimelineScope.ts
@@ -1,0 +1,3 @@
+export enum TimelineScope {
+  local = "local",
+}
